--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ border-radius: 20px;
 color: #FFFFFF;
 font-family: Verdana;
 font-size: 15px;
-font-weight: 100;
+font-weight: bold;
 padding: 10px;
 box-shadow: 1px 1px 20px 0px #000000;
 -webkit-box-shadow: 1px 1px 20px 0px #000000;
