--- a/css/style.css
+++ b/css/style.css
@@ -12,20 +12,20 @@ body{
 
 h1{
     margin: 0px;
-    font-family: cursive;
+    font-family: 'Pacifico', cursive;
     font-size: 90px;
     margin-bottom: 100px;
     color: #566415;
 }
 
 h2{
-    font-family: sans-serif;
-    font-size: 40px;
+    font-family: 'Odibee Sans', cursive;
+    font-size: 60px;
     margin : 10px;
     color: #566415;
 }
 h3{
-    font-family: sans-serif;
+    font-family: 'Sriracha', cursive;
     font-size: 40px;
     margin : 50px auto 0px auto;
     color: #566415;
@@ -35,7 +35,7 @@ h3{
 
 p{
     font-size: 20px;
-    font-family: sans-serif;
+    font-family: 'Raleway', sans-serif;
     margin : 0px auto 50px auto;
 }
 
@@ -48,22 +48,14 @@ p{
     position: absolute;
     left : 200px;
 }
-.mountain1{
-    position: relative;
-    top: 50px;
-}
-.mountain2{
-    position:relative;
-    top:50px;
-    right:80px;
-}
+
 
 .middle-container{
     margin: 150px;
 }
 
 .skills{
-    margin : 100px;
+    margin : 100px 80px 20px 80px;
     height:800px;
 }
 
@@ -84,8 +76,8 @@ p{
 }
 
 .skill-row{
-    margin : 80px auto;
-    height : 400px;
+    
+    height : 300px;
 }
 
 
@@ -95,5 +87,68 @@ p{
     margin-top: 100px;;
 }
 .bottom-container{
-    height:100px;
+    height:150px;
+    background-color: #e9506c81;
+    padding-top: 70px;
 }
+
+a{
+    text-decoration: none;
+    padding: 20px;
+    color: darkgreen;
+    font-size: 25px;
+    font-family: 'Nanum Gothic', sans-serif;
+}
+
+a:hover{
+    color: cyan;
+}
+
+hr{   
+    border: dotted 6px;
+    border-color: darkgrey;
+    border-bottom: none;
+    width: 6%;
+    margin: 100px auto;
+    
+}
+
+.button {
+    background: #3DF6A3;
+    background-image: -webkit-linear-gradient(top, #3DF6A3, #D0C31E);
+    background-image: -moz-linear-gradient(top, #3DF6A3, #D0C31E);
+background-image: -ms-linear-gradient(top, #3DF6A3, #D0C31E);
+background-image: -o-linear-gradient(top, #3DF6A3, #D0C31E);
+background-image: linear-gradient(to bottom, #3DF6A3, #D0C31E);
+-webkit-border-radius: 20px;
+-moz-border-radius: 20px;
+border-radius: 20px;
+color: #FFFFFF;
+font-family: Verdana;
+font-size: 15px;
+font-weight: 100;
+padding: 10px;
+box-shadow: 1px 1px 20px 0px #000000;
+-webkit-box-shadow: 1px 1px 20px 0px #000000;
+-moz-box-shadow: 1px 1px 20px 0px #000000;
+text-shadow: 1px 1px 20px #000000;
+border: solid #337FED 1px;
+text-decoration: none;
+display: inline-block;
+cursor: pointer;
+text-align: center;
+}
+
+.button:hover {
+    border: solid #89ED33 1px;
+    background: #CAD01E;
+    background-image: -webkit-linear-gradient(top, #CAD01E, #F6EC3D);
+    background-image: -moz-linear-gradient(top, #CAD01E, #F6EC3D);
+    background-image: -ms-linear-gradient(top, #CAD01E, #F6EC3D);
+    background-image: -o-linear-gradient(top, #CAD01E, #F6EC3D);
+    background-image: linear-gradient(to bottom, #CAD01E, #F6EC3D);
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    text-decoration: none;
+    }
